fixed title size on mobile

--- a/index.css
+++ b/index.css
@@ -211,4 +211,7 @@ body:not(body *) {
             width: 100% !important;
             height: 100% !important;
         }
+        h1 {
+            font-size: 90%;
+        }
 }
